@@ -6,7 +6,7 @@
 <h1>LSP Servlet interface</h1>
 
 <p>LSP pages can be used as an alternative to JSP in a 
-<a href="http://java.sun.com/products/servlet">Java Servlet</a> 
+<a target="_new" href="http://java.sun.com/products/servlet">Java Servlet</a> 
 based web application. This document assumes that version 2.3 
 of the Servlet API is used.</p>
 
@@ -22,8 +22,8 @@ of your web application.</li>
 <li>Put any XSLT stylesheets used in the <code>WEB-INF/classes</code> 
 directory of your web application.</li>
 
-<li>Use the <code>nu.staldal.lsp.servlet</code> package from 
-your Serlvets to execute LSP pages. See the <a href="javadoc/index.html">API documentation</a>.</li>
+<li>Use the <a href="javadoc/nu/staldal/lsp/servlet/package-summary.html"><code>nu.staldal.lsp.servlet</code></a> 
+package from your Servlets to execute LSP pages.</li>
 
 </ol>
 
