@@ -11,7 +11,7 @@ but keeps bussines logic and technical details out of templates.
 LSP is compiled into Java bytecode for efficient execution.</p>
 
 <p>LSP pages can be used as an alternative to JSP in a 
-<a href="http://java.sun.com/products/servlet">Java Servlet</a> 
+<a target="_new" href="http://java.sun.com/products/servlet">Java Servlet</a> 
 based web application.</p>
 
 <h3>Where</h3>
@@ -29,3 +29,4 @@ based web application.</p>
 
 </body>
 </html>
+
