@@ -57,3 +57,5 @@
 1.2
 ---
 * Transform LSP output with XSLT stylesheet.
+* Improved documentation.
+
